--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,47 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_refresh"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-<RelativeLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="fill_parent"
         android:background="#e9e9e9">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/filterTitle"
-        android:text="@string/packagefilter"
-        android:layout_alignParentTop="true"
-        android:textSize="12sp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
 
-        android:fontFamily="sans-serif" android:textColor="@android:color/black"/>
+        <TextView
+            android:id="@+id/filterTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/packagefilter"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
 
-    <AutoCompleteTextView
+        <TextView
+            android:id="@+id/addPackageEditText"
+            style="@style/AutoCompleteDevDrawerTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/yourcompanyhint"
-            android:id="@+id/addPackageEditText"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/filterTitle"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/addButton"
-            android:inputType="textNoSuggestions" style="@style/AutoCompleteDevDrawerTheme"
-            android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp" android:fontFamily="sans-serif-light"/>
-    <ListView
+            android:fontFamily="sans-serif-light"
+            android:hint="@string/yourcompanyhint"
+            android:inputType="textNoSuggestions" />
+
+        <ListView
+            android:id="@+id/packagesListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/packagesListView"
             android:layout_alignParentLeft="true"
             android:layout_below="@id/addPackageEditText"
-            android:background="@drawable/background_repeat"/>
-    <ImageView
+            android:background="@drawable/background_repeat" />
+
+        <ImageView
+            android:id="@+id/addButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/addButton"
+            android:layout_alignBottom="@id/addPackageEditText"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@id/addPackageEditText"
-            android:layout_alignBottom="@id/addPackageEditText"
             android:layout_marginRight="10dp"
-            android:src="@drawable/add_imageview"/>
-</RelativeLayout>
+            android:src="@drawable/add_imageview" />
+
+    </RelativeLayout>
+
+</android.support.v4.widget.SwipeRefreshLayout>
