--- a/app/src/main/res/layout/widget_layout_dark.xml
+++ b/app/src/main/res/layout/widget_layout_dark.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/orangeImage"
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:background="#FF8800" />
+
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_toRightOf="@+id/orangeImage"
+        android:background="@drawable/background_repeat_dark"
+        android:divider="@null"
+        android:dividerHeight="0dp" />
+
     <ImageView
-            android:layout_height="match_parent"
-            android:layout_width="5dp"
-            android:id="@+id/orangeImage"
-            android:background="#FF8800"
-            />
-    <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/orangeImage"
-            android:id="@+id/listView"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:background="@drawable/background_repeat_dark"/>
+        android:id="@+id/btn_refresh"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:src="@drawable/refresh_up"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"/>
+
 </RelativeLayout>
