--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,47 +2,66 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <PreferenceCategory android:title="Synchronization">
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="flgEnableSync"
+            android:title="Enable synchronization"
+            android:summary="Download package list "/>
+        <EditTextPreference
+            android:hint="sync URL"
+            android:key="syncUrl"
+            android:title="URL to package list (json)" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="Activity Launcher">
-        <CheckBoxPreference android:key="showActivityChoice"
-                            android:title="Show activity choice on launch"
-                            android:defaultValue="false"/>
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="showActivityChoice"
+            android:title="Show activity choice on launch" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Launching Intents">
-        <ListPreference android:key="launchingIntents"
-                        android:title="Launching Intent"
-                        android:defaultValue="aosp"
-                        android:entries="@array/launching_intents"
-                        android:entryValues="@array/launching_intents_values"
-                        />
+        <ListPreference
+            android:defaultValue="aosp"
+            android:entries="@array/launching_intents"
+            android:entryValues="@array/launching_intents_values"
+            android:key="launchingIntents"
+            android:title="Launching Intent" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Sorting">
-        <ListPreference android:key="widgetSorting"
-                        android:title="Widget Sorting Options"
-                        android:entries="@array/sorting_options"
-                        android:entryValues="@array/sorting_options_values"
-                        android:defaultValue="added"/>
+        <ListPreference
+            android:defaultValue="added"
+            android:entries="@array/sorting_options"
+            android:entryValues="@array/sorting_options_values"
+            android:key="widgetSorting"
+            android:title="Widget Sorting Options" />
 
     </PreferenceCategory>
     <PreferenceCategory android:title="Widget Theme">
-        <ListPreference android:key="theme"
-                        android:title="Theme"
-                        android:entries="@array/widget_themes"
-                        android:entryValues="@array/widget_themes"
-                        android:defaultValue="Light"/>
+        <ListPreference
+            android:defaultValue="Light"
+            android:entries="@array/widget_themes"
+            android:entryValues="@array/widget_themes"
+            android:key="theme"
+            android:title="Theme" />
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Root access">
-        <SwitchPreference android:key="rootEnabled"
-                          android:title="Advanced features"
-                          android:defaultValue="false"/>
-        <CheckBoxPreference android:key="rootQuickUninstall"
-                            android:title="Quick uninstall"
-                            android:defaultValue="false" />
-        <CheckBoxPreference android:key="rootClearCache"
-                            android:title="Clear cache"
-                            android:defaultValue="false" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="rootEnabled"
+            android:title="Advanced features" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="rootQuickUninstall"
+            android:title="Quick uninstall" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="rootClearCache"
+            android:title="Clear cache" />
     </PreferenceCategory>
 
 </PreferenceScreen>
