--- a/app/src/main/res/layout/legacy_dialog.xml
+++ b/app/src/main/res/layout/legacy_dialog.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ListView
+        android:id="@+id/legacyListView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/legacyListView"
-        android:background="@drawable/background_repeat"/>
+        android:background="@drawable/background_repeat" />
+
+    <ImageView
+        android:id="@+id/btn_refresh"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:src="@drawable/refresh_up"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"/>
+
+</RelativeLayout>
